fixed scrollbars on firefox

--- a/src/Game.css
+++ b/src/Game.css
@@ -2,14 +2,14 @@
   --game-block-size: 32px;
 }
 
+body {
+  overflow: hidden;
+}
+
 .Game {
   position: relative;
   margin: auto;
   display: grid;
-  scrollbar-width: none;
   grid-template: var(--game-block-size) / var(--game-block-size)
 }
 
-body::-webkit-scrollbar {
-  display: none;
-}
